force-app/main/default/objects/Treatment_Plan_c__c/Treatment_Plan_c__c.object-meta.xml
<CustomObject>
    <label>Treatment_Plan__c</label>
    <nameField>
        <label>Treatment_Plan__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treatment Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>