force-app/main/default/objects/Treatment_Plan_c__c/fields/Clinical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Condition__c</fullName>
    <externalId>true</externalId>
    <label>Clinical Condition</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>