force-app/main/default/objects/Treatment_Plan_c__c/fields/Duration_Days_c__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days_c__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration_Days__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>