force-app/main/default/objects/Treatment_Plan_c__c/fields/Is_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_c__c</fullName>
    <formula>IF(AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt;= TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Active__c</label>
    <type>Checkbox</type>
</CustomField>