force-app/main/default/objects/Treatment_Plan_c__c/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>