force-app/main/default/objects/Treatment_Plan_c__c/validationRules/TreatmentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TreatmentDate</fullName>
    <active>true</active>
    <description>End_Date__c &lt; Start_Date__c</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>&quot;The end date cannot be
earlier than the start
date.&quot;</errorMessage>
</ValidationRule>