force-app/main/default/objects/Treatment_Plan_c__c/validationRules/TreatmentHighCost.validationRule-meta.xml
<ValidationRule>
    <fullName>TreatmentHighCost</fullName>
    <active>true</active>
    <description>End_Date__c &lt; Start_Date__c</description>
    <errorConditionFormula>AND(Total_Estimated_Cost__c &gt; 50000,
NOT(Is_Approved__c))</errorConditionFormula>
    <errorDisplayField>Is_Approved__c</errorDisplayField>
    <errorMessage>&quot;High-cost treatments
require formal director
approval.&quot;</errorMessage>
</ValidationRule>